Finished all parts of the assessment

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background: #ddd;
   margin: 1rem;
   padding: 1rem;
-  max-width: 500px;
+  max-width: 600px;
   margin: 2rem auto;
   font-family: "Open Sans", sans-serif;
 }
@@ -37,11 +37,17 @@ img {
 	max-width: 300px;
 }
 
+#mapImage{
+	max-width: 600px;
+}
+
 .yellowLarge{
 	background-color: yellow;
 	height: 50px;
 	width: 158px;
 	font-size: large;
+	border-radius: 10px;
+	
 }
 
 .header{
@@ -57,7 +63,7 @@ img {
 }
 
 .fieldForm{
-	background-color: red;
+	background-color: rgb(0, 0, 0);
 	color: white;
 	display: flex;
 	justify-content: space-between;
@@ -69,3 +75,31 @@ img {
 .spacing{
 	height: 20px;
 }
+.restaurantBtn{
+	background-color: red;
+	height: 50px;
+	width: 158px;
+	font-size: large;
+	color: white;
+	border-radius: 10px;
+}
+
+.footer{
+	background-color: red;
+	display: flex;
+	font-size: large;
+	color: white;
+	background-color: red;
+	height: 100px;
+	justify-content: center;
+	align-items: center;
+	
+}
+
+.allInCenter{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+}
+
